# polaris-local-forge

./: .env.example  .envrc  .gitignore  .yamllint  LICENSE  LICENSE.txt  README.md  SKILL.md  SKILL_README.md  THIRD_PARTY_LICENSES.md  Taskfile.yml  plforge  pyproject.toml
.cursor/rules/: cli-interaction-patterns.mdc  cli-patterns.mdc  cortex-skills.mdc  project-context.mdc  skill-development.mdc  workflow-sync.mdc  workflow.mdc  yaml-schemas.mdc
.github/workflows/: polaris-admin-tool.yml  polaris-server-image.yml
config/: cluster-config.yaml
datasets/: README.md  plantae.toml  wildlife.toml
docs/: cli-design.md  flag-usage-patterns.md  iceberg-metadata-rewrite.md  podman-setup.md  polaris-s3-compatible-storage.md  smart-sync.md
example-manifests/: polaris-local-forge-manifest.md
k8s/features/: localstack.yaml  rustfs.yaml
k8s/polaris/: deployment.yaml  kustomization.yaml
k8s/polaris/jobs/: job-bootstrap.yaml  job-purge.yaml  kustomization.yaml
notebooks/: l2c_workbook.ipynb  verify_setup.ipynb
polaris-forge-setup/: ansible.cfg  api_query.yml  catalog_cleanup.yml  catalog_setup.yml  cluster_checks.yml  manifest.yml  prepare.yml
polaris-forge-setup/defaults/: main.yml
polaris-forge-setup/tasks/: drop_tables.yml
polaris-forge-setup/templates/: aws-config.j2  aws-credentials.j2  bootstrap-credentials.env.j2  manifest.md.j2  polaris-secrets.yaml.j2  polaris.env.j2  polaris.yaml.j2  postgresql.yml.j2
polaris-forge-setup/templates/notebooks/: verify_setup.ipynb.j2
polaris-forge-setup/templates/scripts/: analyze_catalog.sql.j2  explore_catalog.sql.j2
polaris_forge/: __init__.py  cli.py
scripts/: .gitkeep-explore_catalog  README.md  analyze_catalog.sql  explore_catalog.py  pyiceberg_data_loader.py
src/polaris_forge/: cli.py
src/polaris_local_forge/: __init__.py  api.py  catalog.py  cli.py  cluster.py  common.py  container_runtime.py  polaris_ops.py  setup.py
src/polaris_local_forge/l2c/: __init__.py  common.py  inventory.py  orchestrators.py  refresh.py  register.py  rewrite.py  sessions.py  setup_aws.py  setup_snowflake.py  sync.py
src/polaris_local_forge/l2c/sql/: cleanup_catalog_integration.sql  cleanup_database.sql  cleanup_external_volume.sql  cleanup_role.sql  drop_table.sql  refresh_table.sql  register_table.sql  setup_catalog_integration.sql  setup_role.sql
taskfiles/: catalog.yml  cluster.yml  l2c.yml  ops.yml  podman.yml  polaris.yml
test/: __init__.py  isolated-test.sh
user-project/: .envrc.example  .gitignore.example  pyproject.toml
user-project/notebooks/: l2c_workbook.ipynb
