[project]
name = "polaris-forge"
version = "0.1.0"
description = "CLI tools for managing local Apache Polaris development environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "cryptography>=44.0.0",
    "duckdb>=1.4.0",
    "jinja2>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pyiceberg[s3fs]>=0.8.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
polaris-forge = "polaris_forge.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ansible>=11.2.0",
    "ansible-dev-tools>=25.2.1",
    "ansible-lint>=25.1.2",
    "ipykernel>=6.29.5",
    "kubernetes>=32.0.0",
    "watchdog>=6.0.0",
    "yamllint>=1.35.1",
]
