[project]
name = "polaris-local-forge"
version = "0.1.0"
description = "CLI tools for managing local Apache Polaris development environment"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Kamesh Sampath", email = "kamesh.sampath@snowflake.com" }]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "click>=8.1.0",
    "cryptography>=44.0.0",
    "duckdb>=1.4.0",
    "jinja2>=3.1.5",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pyiceberg[s3fs]>=0.11.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "snow-utils",
    "snow-utils-common",
]

[project.scripts]
polaris-local-forge = "polaris_local_forge.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polaris_local_forge"]

[dependency-groups]
dev = [
    "ansible>=11.2.0",
    "ansible-dev-tools>=25.2.1",
    "ansible-lint>=25.1.2",
    "ipykernel>=6.29.5",
    "kubernetes>=32.0.0",
    "watchdog>=6.0.0",
    "yamllint>=1.35.1",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
# Local paths during active development -- switch to git URLs before merge
snow-utils = { path = "/Users/ksampath/git/kameshsampath/snow-utils", editable = true }
snow-utils-common = { path = "/Users/ksampath/git/kameshsampath/snow-utils/common", editable = true }

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
