[project]
name = "polaris-local-workspace"
version = "0.1.0"
description = "Local Apache Polaris workspace - query Iceberg tables with DuckDB, PyIceberg, and boto3"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "duckdb>=1.4.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    # PyIceberg pinned to 0.10.0 due to Polaris compatibility issues
    # 0.11.0 has REST API validation errors: 'PUT' is not a valid HttpMethod
    # Can upgrade to 0.11.0+ when Polaris server compatibility is resolved
    "pyiceberg[s3fs]==0.10.0",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.0",
    "snowflake-connector-python[pandas,secure-local-storage]>=3.12.0",
]
